syntax = "proto3";
package electra.meter;

option go_package = "electra/x/meter/types";

message Producerbillingline {
  string producerDeviceID = 1; 
  uint64 cycleID = 2; 
  uint64 lineid = 3; 
  string customerdeviceID = 4; 
  string billContractID = 5; 
  uint64 lineWh = 6; 
  uint64 lineWhPrice = 7; 
  string curency = 8; 
  uint64 decremented = 9; 
  uint64 phase = 10; 
  string creator = 11;
}

